--- a/joker_tv/joker_tv.qsf
+++ b/joker_tv/joker_tv.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE22F17C8
-set_global_assignment -name TOP_LEVEL_ENTITY joker_tv
+set_global_assignment -name TOP_LEVEL_ENTITY joker_tv_pin
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:53:04  Май 23, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Lite Edition"
@@ -53,4 +53,56 @@ set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.2V
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
-set_global_assignment -name VERILOG_FILE joker_tv.v
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VERILOG_FILE ../usb3/usb_top.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_top.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_scramble.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_protocol.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_pipe.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_ltssm.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_link.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_lfsr.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_ep0.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_ep.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_descramble.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb3_crc.v
+set_global_assignment -name VERILOG_FILE ../usb3/mf_usb3_tx.v
+set_global_assignment -name QIP_FILE ../usb3/mf_usb3_tx.qip
+set_global_assignment -name VERILOG_FILE ../usb3/mf_usb3_rx.v
+set_global_assignment -name QIP_FILE ../usb3/mf_usb3_rx.qip
+set_global_assignment -name VERILOG_FILE ../usb3/mf_usb3_pll.v
+set_global_assignment -name QIP_FILE ../usb3/mf_usb3_pll.qip
+set_global_assignment -name VERILOG_FILE ../usb3/mf_usb3_ep0in.v
+set_global_assignment -name QIP_FILE ../usb3/mf_usb3_ep0in.qip
+set_global_assignment -name VERILOG_FILE ../usb3/mf_usb3_ep.v
+set_global_assignment -name QIP_FILE ../usb3/mf_usb3_ep.qip
+set_global_assignment -name VERILOG_FILE ../usb3/mf_usb3_descrip.v
+set_global_assignment -name QIP_FILE ../usb3/mf_usb3_descrip.qip
+set_global_assignment -name QIP_FILE ../usb3/mf_usb2_ep0in.qip
+set_global_assignment -name VERILOG_FILE ../usb3/mf_usb2_ep.v
+set_global_assignment -name QIP_FILE ../usb3/mf_usb2_ep.qip
+set_global_assignment -name VERILOG_FILE ../usb3/mf_usb2_descrip.v
+set_global_assignment -name QIP_FILE ../usb3/mf_usb2_descrip.qip
+set_global_assignment -name VERILOG_FILE ../usb3/usb2_ulpi.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb2_protocol.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb2_packet.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb2_ep0.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb2_ep.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb2_crc.v
+set_global_assignment -name VERILOG_FILE ../usb3/usb2_top.v
+set_global_assignment -name QIP_FILE aospan_pll.qip
+set_global_assignment -name QIP_FILE tsfifo.qip
+set_global_assignment -name VHDL_FILE ../ts/dvb_ts_sync.vhd
+set_global_assignment -name VHDL_FILE ../ts/dvb_ts_deser.vhd
+set_global_assignment -name VHDL_FILE ../ts/dvb_ts_selector.vhd -hdl_version VHDL_2008
+set_global_assignment -name VERILOG_FILE ../ts/ts_proxy.v
+set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_bit_ctrl.v
+set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_byte_ctrl.v
+set_global_assignment -name VERILOG_FILE ../opencores_i2c/opencores_i2c.v
+set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_top.v
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE joker_tv_pin.v
