--- a/joker_tv/joker_tv.qsf
+++ b/joker_tv/joker_tv.qsf
@@ -98,6 +98,40 @@ set_location_assignment PIN_R16 -to ci_cd1
 set_location_assignment PIN_A10 -to ci_cd2
 set_location_assignment PIN_L16 -to ci_ireq_n
 set_location_assignment PIN_L13 -to ci_overcurrent_n
+set_location_assignment PIN_N9 -to ci_ce_n
+set_location_assignment PIN_T10 -to ci_bus_dir
+set_location_assignment PIN_R10 -to ci_data_buf_oe_n
+set_location_assignment PIN_A13 -to ci_wait_n
+set_location_assignment PIN_M7 -to ci_iowr_n
+set_location_assignment PIN_N8 -to ci_oe_n
+set_location_assignment PIN_M6 -to ci_we_n
+set_location_assignment PIN_C15 -to ci_reset_oe_n
+set_location_assignment PIN_B16 -to ci_reset
+set_location_assignment PIN_P3 -to ci_reg_n
+set_location_assignment PIN_T2 -to ci_a[0]
+set_location_assignment PIN_N3 -to ci_a[1]
+set_location_assignment PIN_R3 -to ci_a[2]
+set_location_assignment PIN_T3 -to ci_a[3]
+set_location_assignment PIN_R4 -to ci_a[4]
+set_location_assignment PIN_T4 -to ci_a[5]
+set_location_assignment PIN_N5 -to ci_a[6]
+set_location_assignment PIN_R5 -to ci_a[7]
+set_location_assignment PIN_T6 -to ci_a[8]
+set_location_assignment PIN_R7 -to ci_a[9]
+set_location_assignment PIN_P9 -to ci_a[10]
+set_location_assignment PIN_T7 -to ci_a[11]
+set_location_assignment PIN_T5 -to ci_a[12]
+set_location_assignment PIN_R6 -to ci_a[13]
+set_location_assignment PIN_N6 -to ci_a[14]
+set_location_assignment PIN_R12 -to ci_d[0]
+set_location_assignment PIN_T12 -to ci_d[1]
+set_location_assignment PIN_R11 -to ci_d[2]
+set_location_assignment PIN_T15 -to ci_d[3]
+set_location_assignment PIN_R14 -to ci_d[4]
+set_location_assignment PIN_T14 -to ci_d[5]
+set_location_assignment PIN_R13 -to ci_d[6]
+set_location_assignment PIN_T13 -to ci_d[7]
+set_global_assignment -name VERILOG_FILE ../joker_control/joker_control.v
 set_global_assignment -name VHDL_FILE ../ci/ci_bridge.vhd
 set_global_assignment -name VHDL_FILE ../ci/ci_control.vhd
 set_global_assignment -name SDC_FILE joker_tv.sdc
@@ -150,37 +184,4 @@ set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_bit_ctrl.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_byte_ctrl.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/opencores_i2c.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_top.v
-set_location_assignment PIN_N9 -to ci_ce_n
-set_location_assignment PIN_T10 -to ci_bus_dir
-set_location_assignment PIN_R10 -to ci_data_buf_oe_n
-set_location_assignment PIN_A13 -to ci_wait_n
-set_location_assignment PIN_M7 -to ci_iowr_n
-set_location_assignment PIN_N8 -to ci_oe_n
-set_location_assignment PIN_M6 -to ci_we_n
-set_location_assignment PIN_C15 -to ci_reset_oe_n
-set_location_assignment PIN_B16 -to ci_reset
-set_location_assignment PIN_P3 -to ci_reg_n
-set_location_assignment PIN_T2 -to ci_a[0]
-set_location_assignment PIN_N3 -to ci_a[1]
-set_location_assignment PIN_R3 -to ci_a[2]
-set_location_assignment PIN_T3 -to ci_a[3]
-set_location_assignment PIN_R4 -to ci_a[4]
-set_location_assignment PIN_T4 -to ci_a[5]
-set_location_assignment PIN_N5 -to ci_a[6]
-set_location_assignment PIN_R5 -to ci_a[7]
-set_location_assignment PIN_T6 -to ci_a[8]
-set_location_assignment PIN_R7 -to ci_a[9]
-set_location_assignment PIN_P9 -to ci_a[10]
-set_location_assignment PIN_T7 -to ci_a[11]
-set_location_assignment PIN_T5 -to ci_a[12]
-set_location_assignment PIN_R6 -to ci_a[13]
-set_location_assignment PIN_N6 -to ci_a[14]
-set_location_assignment PIN_R12 -to ci_d[0]
-set_location_assignment PIN_T12 -to ci_d[1]
-set_location_assignment PIN_R11 -to ci_d[2]
-set_location_assignment PIN_T15 -to ci_d[3]
-set_location_assignment PIN_R14 -to ci_d[4]
-set_location_assignment PIN_T14 -to ci_d[5]
-set_location_assignment PIN_R13 -to ci_d[6]
-set_location_assignment PIN_T13 -to ci_d[7]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
