--- a/joker_tv/joker_tv.qsf
+++ b/joker_tv/joker_tv.qsf
@@ -123,6 +123,22 @@ set_location_assignment PIN_R14 -to ci_d[4]
 set_location_assignment PIN_T14 -to ci_d[5]
 set_location_assignment PIN_R13 -to ci_d[6]
 set_location_assignment PIN_T13 -to ci_d[7]
+set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[0]
+set_location_assignment PIN_B1 -to LED[0]
+set_location_assignment PIN_C2 -to LED[1]
+set_location_assignment PIN_A14 -to LED[3]
+set_location_assignment PIN_B13 -to LED[4]
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to ci_overcurrent_n
+set_location_assignment PIN_F14 -to FE_ATSC_nRST
+set_location_assignment PIN_J14 -to FE_DTMB_nRST
+set_location_assignment PIN_J13 -to FE_DVB_nRST
+set_location_assignment PIN_F13 -to FE_TU_nRST
+set_location_assignment PIN_A15 -to TU_IIC0_EN
+set_location_assignment PIN_L14 -to SW_nEN[0]
+set_location_assignment PIN_F2 -to SW_nEN[1]
+set_location_assignment PIN_F1 -to tps_overcurrent_n
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to tps_overcurrent_n
+set_global_assignment -name VERILOG_FILE synchronizer.v
 set_global_assignment -name VERILOG_FILE ../joker_control/joker_control.v
 set_global_assignment -name VHDL_FILE ../ci/ci_bridge.vhd
 set_global_assignment -name VHDL_FILE ../ci/ci_control.vhd
@@ -176,19 +192,4 @@ set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_bit_ctrl.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_byte_ctrl.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/opencores_i2c.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_top.v
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[0]
-set_location_assignment PIN_B1 -to LED[0]
-set_location_assignment PIN_C2 -to LED[1]
-set_location_assignment PIN_A14 -to LED[3]
-set_location_assignment PIN_B13 -to LED[4]
-set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to ci_overcurrent_n
-set_location_assignment PIN_F14 -to FE_ATSC_nRST
-set_location_assignment PIN_J14 -to FE_DTMB_nRST
-set_location_assignment PIN_J13 -to FE_DVB_nRST
-set_location_assignment PIN_F13 -to FE_TU_nRST
-set_location_assignment PIN_A15 -to TU_IIC0_EN
-set_location_assignment PIN_L14 -to SW_nEN[0]
-set_location_assignment PIN_F2 -to SW_nEN[1]
-set_location_assignment PIN_F1 -to tps_overcurrent_n
-set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to tps_overcurrent_n
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
