--- a/joker_tv/joker_tv.qsf
+++ b/joker_tv/joker_tv.qsf
@@ -49,7 +49,6 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 8
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.2V
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
@@ -138,6 +137,34 @@ set_location_assignment PIN_L14 -to SW_nEN[0]
 set_location_assignment PIN_F2 -to SW_nEN[1]
 set_location_assignment PIN_F1 -to tps_overcurrent_n
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to tps_overcurrent_n
+set_location_assignment PIN_L1 -to TS_ATBM8881_D0
+set_location_assignment PIN_L2 -to TS_ATBM8881_CLK
+set_location_assignment PIN_N1 -to TS_ATBM8881_START
+set_location_assignment PIN_L4 -to TS_ATBM8881_VALID
+set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
+set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_location_assignment PIN_H1 -to pFLASH_SCLK
+set_global_assignment -name ENABLE_OCT_DONE OFF
+set_global_assignment -name STRATIXV_CONFIGURATION_SCHEME "PASSIVE SERIAL"
+set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
+set_global_assignment -name RESERVE_DCLK_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name RESERVE_DATA0_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_location_assignment PIN_H2 -to pFLASH_MISO
+set_location_assignment PIN_D2 -to pFLASH_nCS
+set_global_assignment -name RESERVE_DATA1_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_global_assignment -name RESERVE_FLASH_NCE_AFTER_CONFIGURATION "USE AS REGULAR IO"
+set_location_assignment PIN_C1 -to pFLASH_MOSI
+set_global_assignment -name VERILOG_FILE ../joker_control/joker_spi.v
+set_global_assignment -name VERILOG_FILE ../spi/rtl/verilog/timescale.v
+set_global_assignment -name VERILOG_FILE ../spi/rtl/verilog/spi_shift.v
+set_global_assignment -name VERILOG_FILE ../spi/rtl/verilog/spi_defines.v
+set_global_assignment -name VERILOG_FILE ../spi/rtl/verilog/spi_clgen.v
+set_global_assignment -name VERILOG_FILE ../spi/rtl/verilog/spi_top.v
 set_global_assignment -name VERILOG_FILE synchronizer.v
 set_global_assignment -name VERILOG_FILE ../joker_control/joker_control.v
 set_global_assignment -name VHDL_FILE ../ci/ci_bridge.vhd
@@ -192,8 +219,4 @@ set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_bit_ctrl.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_byte_ctrl.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/opencores_i2c.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_top.v
-set_location_assignment PIN_L1 -to TS_ATBM8881_D0
-set_location_assignment PIN_L2 -to TS_ATBM8881_CLK
-set_location_assignment PIN_N1 -to TS_ATBM8881_START
-set_location_assignment PIN_L4 -to TS_ATBM8881_VALID
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
