--- a/joker_tv/joker_tv.qsf
+++ b/joker_tv/joker_tv.qsf
@@ -159,6 +159,10 @@ set_location_assignment PIN_D2 -to pFLASH_nCS
 set_global_assignment -name RESERVE_DATA1_AFTER_CONFIGURATION "USE AS REGULAR IO"
 set_global_assignment -name RESERVE_FLASH_NCE_AFTER_CONFIGURATION "USE AS REGULAR IO"
 set_location_assignment PIN_C1 -to pFLASH_MOSI
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name USE_SIGNALTAP_FILE joker_tv.stp
+set_location_assignment PIN_P8 -to ci_iord_n
+set_global_assignment -name VERILOG_FILE ../joker_control/joker_ci.v
 set_global_assignment -name VERILOG_FILE ../joker_control/joker_spi.v
 set_global_assignment -name VERILOG_FILE ../spi/rtl/verilog/timescale.v
 set_global_assignment -name VERILOG_FILE ../spi/rtl/verilog/spi_shift.v
@@ -219,8 +223,5 @@ set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_bit_ctrl.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_byte_ctrl.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/opencores_i2c.v
 set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_top.v
-set_global_assignment -name ENABLE_SIGNALTAP OFF
-set_global_assignment -name USE_SIGNALTAP_FILE joker_tv.stp
 set_global_assignment -name SIGNALTAP_FILE joker_tv.stp
-set_location_assignment PIN_P8 -to ci_iord_n
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
