--- a/joker_tv/joker_tv.qsf
+++ b/joker_tv/joker_tv.qsf
@@ -259,4 +259,5 @@ set_global_assignment -name VERILOG_FILE ../opencores_i2c/i2c_master_top.v
 set_global_assignment -name SIGNALTAP_FILE joker_tv.stp
 set_global_assignment -name QIP_FILE ../ts/ts_ci_fifo.qip
 set_global_assignment -name QIP_FILE ../ts/ts_filter_table.qip
+set_global_assignment -name QIP_FILE ../ts/ts_ci_sync.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
